force-app/main/default/objects/Lead/fields/Notes_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Notes_Campaign__c</fullName>
    <label>Notes_Campaign</label>
    <type>TextArea</type>
</CustomField>