force-app/main/default/objects/Lead/fields/Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales _Lead</label>
    <referenceTo>CP_Sales_lead__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>